# Rocket-Plugin

./: .gitignore  The Rocket plugin - Technical Specification.docx
.github/: README.md
.github/workflows/: build.yml  macos-build.yml
RocketRemake/: CMakeLists.txt  README.md  README_REMAKE.md  build_mac.sh  build_mac_internal.sh  build_windows.bat  build_windows_internal.bat
RocketRemake/.github/workflows/: build.yml
RocketRemake/Source/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
RocketRemake/Source/DSP/: DemoFxChain.cpp  DemoFxChain.h  FxChain.cpp  FxChain.h  FxModule.h  ModMatrix.cpp  ModMatrix.h  Modules.cpp  Modules.h
RocketRemake/Source/LookAndFeel/: RackLookAndFeel.h  RocketLookAndFeel.h
The Rocket/: CMakeLists.txt  README.md
The Rocket plugin/__MACOSX/: ._The Rocket plugin
The Rocket/Source/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RocketLookAndFeel.h
The Rocket/Source/DSP/: FxChain.cpp  FxChain.h  FxModule.h  ModMatrix.cpp  ModMatrix.h  Modules.cpp  Modules.h  PresetManager.cpp  PresetManager.h
The Rocket/build_check3/: INSTALL.vcxproj.filters  TheRocket.vcxproj.filters  TheRocketAssets.vcxproj.filters  TheRocket_Standalone.vcxproj.filters  TheRocket_rc_lib.vcxproj.filters  TheRocket_vst3_helper.vcxproj.filters  ZERO_CHECK.vcxproj.filters
The Rocket/build_check3/TheRocketAssets.dir/Release/: TheRocketAssets.lib.recipe
The Rocket/build_check3/TheRocket_Standalone.dir/Release/: The Rocket.exe.recipe
The Rocket/build_check3/TheRocket_VST3.dir/Release/: The Rocket.vst3.recipe
The Rocket/build_check3/TheRocket_rc_lib.dir/Release/: TheRocket_rc_lib.vcxproj.FileListAbsolute.txt  TheRocket_resources.res
The Rocket/build_check3/TheRocket_vst3_helper.dir/Release/: TheRocket_vst3_helper.exe.recipe
The Rocket/build_internal/: INSTALL.vcxproj.filters  TheRocket.vcxproj.filters  TheRocketAssets.vcxproj.filters  TheRocket_VST3.vcxproj.filters  TheRocket_rc_lib.vcxproj.filters  TheRocket_vst3_helper.vcxproj.filters  ZERO_CHECK.vcxproj.filters
The Rocket/build_internal/TheRocket.dir/Release/: The Rocket_SharedCode.lib.recipe
The Rocket/build_internal/TheRocket_Standalone.dir/Release/: The Rocket.exe.recipe
The Rocket/build_internal/TheRocket_rc_lib.dir/Release/: TheRocket_rc_lib.vcxproj.FileListAbsolute.txt
The Rocket/build_juce/: INSTALL.vcxproj.filters  TheRocket.vcxproj.filters  TheRocketAssets.vcxproj.filters  TheRocket_All.vcxproj.filters  TheRocket_Standalone.vcxproj.filters  TheRocket_rc_lib.vcxproj.filters  TheRocket_vst3_helper.vcxproj.filters  ZERO_CHECK.vcxproj.filters
The Rocket/build_juce/TheRocket.dir/Debug/: The Rocket_SharedCode.lib.recipe
The Rocket/build_juce/TheRocket.dir/Release/: The Rocket_SharedCode.lib.recipe
The Rocket/build_juce/TheRocket_Standalone.dir/Debug/: The Rocket.exe.recipe
The Rocket/build_juce/TheRocket_Standalone.dir/Release/: The Rocket.exe.recipe
The Rocket/build_juce/TheRocket_VST3.dir/Debug/: The Rocket.vst3.recipe
The Rocket/build_juce/TheRocket_VST3.dir/Release/: The Rocket.vst3.recipe
The Rocket/build_juce/TheRocket_rc_lib.dir/Debug/: TheRocket_rc_lib.vcxproj.FileListAbsolute.txt
The Rocket/build_juce/TheRocket_rc_lib.dir/Release/: TheRocket_rc_lib.vcxproj.FileListAbsolute.txt
(+4 files in other folders)
